--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="formacao">
                         <p class="texto-formacao">
                             UniBH<br>
-                            Técnico de Informática
+                            Design
                             <br> Início em 01/2019 
                             <br> Trancado em 06/2019
                         </p>
